[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/NameTag/NameTag.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.3

[node name="NameTag" type="Area" groups=["name_tag"]]
collision_layer = 32768
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 415.0
margin_bottom = 21.0
color = Color( 0, 0, 0, 0.12549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -352.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Name Tag"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="hide_nametag" from="." to="." method="_on_hide_nametag"]
[connection signal="show_nametag" from="." to="." method="_on_show_nametag"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_screen_exited"]
